MY PROFIL GILBERT SIMARMATA.html

--- a/MY PROFIL GILBERT SIMARMATA.html
+++ b/MY PROFIL GILBERT SIMARMATA.html
@@ -201,7 +201,7 @@
     </div>
 
     <footer>
-        &copy; 2024 Gilbert Simarmata. Semua hak cipta dilindungi. <a href="https://example.com">Website Anda</a>
+        &copy; 2024 Gilbert Simarmata. Semua hak cipta dilindungi. <a href="https://github.com/gilbertsmrt/my-profile-gilbert/settingss">Website Anda</a>
     </footer>
 </body>
 </html>
